# DoT-Innovation-Project

./: README.md
ORIS-Parth/oris_ai/: README.md  generate_report.py  quick_test.py  requirements.txt
ORIS-Parth/oris_ai/agent/: __init__.py  train_ppo.py
ORIS-Parth/oris_ai/dashboard/: dashboard.js  index.html  scene3d.js  simulation.js  styles.css
ORIS-Parth/oris_ai/env/: __init__.py  urban_canyon_env.py
ORIS-Parth/oris_ai/outputs/: eval_results.json  oris_policy_lite.pt  quick_test_stats.pkl  training_log.json  vec_normalize.pkl
ORIS-Parth/oris_ai/outputs/eval_logs/: evaluations.npz
ORIS-Parth/oris_ai/outputs/tensorboard/PPO_1/: events.out.tfevents.1776742515.LAPTOP-QRGEFM1V.25500.0
ORIS-Parth/oris_ai/server/: __init__.py  inference_server.py
ORIS-Parth/oris_ai/utils/: __init__.py  evaluate_and_plot.py
SHREY - (System Control Lead)/: CMakeLists.txt  README.md  build.bat  build.py  main.cpp  rebuild.bat
SHREY - (System Control Lead)/include/rf/: imgui_frontend.hpp  patch_controller.hpp  patch_types.hpp  shift_register_chain.hpp  simulation_engine.hpp
SHREY - (System Control Lead)/src/: imgui_frontend.cpp  patch_controller.cpp  shift_register_chain.cpp  simulation_engine.cpp
sadhana (systemlead)/: README.md  README_ORIS_MATLAB.md  combined_system_simulator.m  control_matrix_simulator.m  oris_3d_radiation_patterns.m  oris_aperture_synthesis.m  oris_aperture_synthesis_results.mat  oris_coverage_results.mat  oris_integration_log_20260423_123737.txt  oris_integration_log_20260424_101643.txt  oris_integration_results.mat  oris_master_integration.m  oris_radiation_patterns.mat  oris_sparameter_processing.m  oris_urban_raytracing.m  pin_diode_circuit_simulator.m  untitled.mlx
(+3 files in other folders)
